hueColorLooper/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: colorlooper-route
    namespace: gohome
spec:
    parentRefs:
        - name: nginx-gateway
          namespace: nginx-gateway
    hostnames:
        - colorlooper.lab
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: colorlooper-service
                port: 3005
